<resources>
    <string name="app_name">Harcama Günlüklerim</string>

    //titles
    <string name="expenses_page_title">Harcamalarım</string>
    <string name="home_page_title">Anasayfa</string>


    <string name="calendar">Takvim</string>
    <string name="home">Anasayfa</string>
    <string name="profile">Hesabım</string>
    <string name="statistics">İstatistik</string>
    <string name="login">Login</string>
    <string name="signIn">Sign In</string>
    <string name="forgotPass">Forgot Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="createAccount">Create Account</string>
    <string name="loginClick">Already have an account? Login</string>
    <string name="registerClick">Don\'t you have an account? Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>