<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_navigation"
        android:icon="@drawable/calendar"
        android:enabled="true"
        android:title="@string/calendar" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/statistic"
        android:enabled="true"
        android:title="@string/statistics" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/home"
        android:enabled="true"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_data_management"
        android:icon="@drawable/person"
        android:enabled="true"
        android:title="@string/profile" />

</menu>